--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "description": "virus detect GUI",
   "main": "index.html",
   "window": {
-    "heigth": 700,
-    "width": 700
+    "height": 500,
+    "width": 800,
+    "icon": "icon.png"
   },
   "css": "css/style.css",
   "js": "js/menu.js",
